fixed image transition issue with Safari as well as the extra margin that was getting created for the language selection. Going to focus on the title algorithm and then start moving assets over

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -516,7 +516,6 @@ textarea,input, select{
 .hidden-image{
 	position:absolute; 
 	left:-999em; 
-	transition:2s;
 	top:0;
 }
 .active_step{
@@ -623,7 +622,7 @@ textarea,input, select{
 
 @media(min-width:0px) and (max-width:767px){
 	.container-more.lang-select{
-		margin-left:8%;
+		padding-left:8%;
 	}	
 
 	.left-series div .h1{
